Bug fix for article video overflow #307

--- a/source/client/ui/styles.scss
+++ b/source/client/ui/styles.scss
@@ -79,6 +79,10 @@
     color: $color-primary;
   }
 
+  iframe, video {
+    max-width: 100%;
+  }
+
   img {
     max-width: 100%;
     height: auto;
